kubernetes/platform/config/cilium/hubble-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Hubble"
    gethomepage.dev/group: "Platform"
    gethomepage.dev/icon: "cilium.svg"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=hubble-ui"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "hubble.${internal_domain}"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
